--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "js-cookie": "^2.1.2"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.9.0",
+    "gulp-babel": "^6.1.2",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.2",
     "yargs": "^4.2.0"
   },
