--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "js-cookie": "^2.1.2"
   },
   "devDependencies": {
+    "babel-core": "^6.10.4",
     "babel-preset-es2015": "^6.9.0",
     "gulp-babel": "^6.1.2",
     "gulp-sourcemaps": "^1.6.0",
